--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -8,6 +8,7 @@
     <!-- MAUI Dependencies -->
     <PackageVersion Include="Microsoft.Maui.Controls" Version="10.0.11" />
     <PackageVersion Include="Microsoft.Maui.Controls.Compatibility" Version="10.0.11" />
+    <PackageVersion Include="Microsoft.Extensions.Logging.Debug" Version="10.0.0" />
     
     <!-- MVVM Dependencies -->
     <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.3.2" />
