--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -3,19 +3,16 @@
     <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
     <CentralPackageTransitivePinningEnabled>true</CentralPackageTransitivePinningEnabled>
   </PropertyGroup>
-
   <ItemGroup>
     <!-- MAUI Dependencies -->
+    <PackageVersion Include="M.BindableProperty.Generator" Version="0.11.1" />
     <PackageVersion Include="Microsoft.Maui.Controls" Version="10.0.11" />
     <PackageVersion Include="Microsoft.Maui.Controls.Compatibility" Version="10.0.11" />
     <PackageVersion Include="Microsoft.Extensions.Logging.Debug" Version="10.0.0" />
-    
     <!-- MVVM Dependencies -->
     <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.3.2" />
-    
     <!-- Animation Dependencies -->
     <PackageVersion Include="CommunityToolkit.Maui" Version="13.0.0" />
-    
     <!-- Testing Dependencies -->
     <PackageVersion Include="Moq" Version="4.18.4" />
   </ItemGroup>
