--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -11,6 +11,8 @@
     <PackageVersion Include="Microsoft.Extensions.Logging.Debug" Version="10.0.0" />
     <!-- MVVM Dependencies -->
     <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.3.2" />
+    <!-- High Performance -->
+    <PackageVersion Include="CommunityToolkit.HighPerformance" Version="8.4.0" />
     <!-- Animation Dependencies -->
     <PackageVersion Include="CommunityToolkit.Maui" Version="13.0.0" />
     <!-- Testing Dependencies -->
