--- a/src/TwentyFortyEight.Core/TwentyFortyEight.Core.csproj
+++ b/src/TwentyFortyEight.Core/TwentyFortyEight.Core.csproj
@@ -2,4 +2,7 @@
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="CommunityToolkit.HighPerformance" />
+  </ItemGroup>
 </Project>
