--- a/src/TwentyFortyEight.Core/TwentyFortyEight.Core.csproj
+++ b/src/TwentyFortyEight.Core/TwentyFortyEight.Core.csproj
@@ -4,5 +4,6 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.HighPerformance" />
+    <PackageReference Include="Microsoft.Extensions.ObjectPool" />
   </ItemGroup>
 </Project>
