--- a/src/TwentyFortyEight.Maui/TwentyFortyEight.Maui.csproj
+++ b/src/TwentyFortyEight.Maui/TwentyFortyEight.Maui.csproj
@@ -2,7 +2,8 @@
   <PropertyGroup>
     <!-- Default targets for local development -->
     <TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">net10.0-windows10.0.19041.0</TargetFrameworks>
-    <TargetFrameworks Condition="!$([MSBuild]::IsOSPlatform('windows'))">net10.0-android;net10.0-ios;net10.0-maccatalyst</TargetFrameworks>
+    <TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('osx'))">net10.0-ios;net10.0-maccatalyst</TargetFrameworks>
+    <TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('linux'))">net10.0-android</TargetFrameworks>
     
     <!-- For CI builds without Xcode, only build Android -->
     <TargetFrameworks Condition="'$(CI)' == 'true' OR '$(GITHUB_ACTIONS)' == 'true'">net10.0-android</TargetFrameworks>
