add double tap board ripple

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -16,6 +16,10 @@
     <PackageVersion Include="Microsoft.Extensions.ObjectPool" Version="10.0.0" />
     <!-- Animation Dependencies -->
     <PackageVersion Include="CommunityToolkit.Maui" Version="13.0.0" />
+
+    <!-- Skia (cross-platform shader-capable rendering) -->
+    <PackageVersion Include="SkiaSharp" Version="2.88.9" />
+    <PackageVersion Include="SkiaSharp.Views.Maui.Controls" Version="2.88.9" />
     <!-- Testing Dependencies -->
     <PackageVersion Include="Moq" Version="4.18.4" />
     <!-- Code Formatting -->
