--- a/src/TwentyFortyEight.Maui/TwentyFortyEight.Maui.csproj
+++ b/src/TwentyFortyEight.Maui/TwentyFortyEight.Maui.csproj
@@ -82,6 +82,8 @@
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" />
     <PackageReference Include="CommunityToolkit.Mvvm" />
     <PackageReference Include="CommunityToolkit.Maui" />
+    <PackageReference Include="SkiaSharp" />
+    <PackageReference Include="SkiaSharp.Views.Maui.Controls" />
   </ItemGroup>
 
   <ItemGroup>
