fix failing test

--- a/src/TwentyFortyEight.ViewModels/TwentyFortyEight.ViewModels.csproj
+++ b/src/TwentyFortyEight.ViewModels/TwentyFortyEight.ViewModels.csproj
@@ -22,4 +22,8 @@
   <ItemGroup>
     <ProjectReference Include="..\TwentyFortyEight.Core\TwentyFortyEight.Core.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <InternalsVisibleTo Include="TwentyFortyEight.ViewModels.Tests" />
+  </ItemGroup>
 </Project>
