--- a/src/TwentyFortyEight.Maui/TwentyFortyEight.Maui.csproj
+++ b/src/TwentyFortyEight.Maui/TwentyFortyEight.Maui.csproj
@@ -18,7 +18,7 @@
     <ApplicationTitle>2048 MAUI</ApplicationTitle>
     
     <!-- App Identifier -->
-    <ApplicationId>com.dappermagna.twentyfourtyeight</ApplicationId>
+    <ApplicationId>com.dappermagna.twentyfortyeight</ApplicationId>
     
     <!-- Versions -->
     <ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
