--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -53,7 +53,6 @@ jobs:
         path: 'TestResults/*.cobertura.xml'
 
   build-ios:
-    if: github.event_name == 'workflow_dispatch'
     runs-on: macos-26
     permissions:
       contents: read
@@ -74,6 +73,50 @@ jobs:
         
     - name: Install .NET MAUI workload
       run: dotnet workload install maui
+
+    - name: Import iOS signing certificate (.p12)
+      if: github.event_name == 'workflow_dispatch' && github.ref == 'refs/heads/main'
+      uses: apple-actions/import-codesign-certs@v3
+      with:
+        p12-file-base64: ${{ secrets.IOS_CERT_P12_BASE64 }}
+        p12-password: ${{ secrets.IOS_CERT_P12_PASSWORD }}
+
+    - name: Install provisioning profile
+      if: github.event_name == 'workflow_dispatch' && github.ref == 'refs/heads/main'
+      shell: bash
+      env:
+        IOS_PROFILE_B64: ${{ secrets.IOS_PROVISION_PROFILE_BASE64 }}
+      run: |
+        set -euo pipefail
+        mkdir -p "$HOME/Library/MobileDevice/Provisioning Profiles"
+
+        PROFILE_PATH="$HOME/Library/MobileDevice/Provisioning Profiles/profile.mobileprovision"
+        echo "$IOS_PROFILE_B64" | base64 --decode > "$PROFILE_PATH"
+
+        security cms -D -i "$PROFILE_PATH" > profile.plist
+        PROFILE_UUID=$(/usr/libexec/PlistBuddy -c 'Print :UUID' profile.plist)
+        mv "$PROFILE_PATH" "$HOME/Library/MobileDevice/Provisioning Profiles/$PROFILE_UUID.mobileprovision"
+        rm -f profile.plist
+        echo "IOS_PROFILE_UUID=$PROFILE_UUID" >> "$GITHUB_ENV"
+
+    - name: Select signing identity
+      if: github.event_name == 'workflow_dispatch' && github.ref == 'refs/heads/main'
+      shell: bash
+      run: |
+        set -euo pipefail
+
+        SIGNING_IDENTITY=$(security find-identity -v -p codesigning | awk -F\" '/Apple Distribution/ {print $2; exit}')
+        if [ -z "${SIGNING_IDENTITY:-}" ]; then
+          SIGNING_IDENTITY=$(security find-identity -v -p codesigning | awk -F\" '/Apple Development/ {print $2; exit}')
+        fi
+
+        if [ -z "${SIGNING_IDENTITY:-}" ]; then
+          echo "No Apple Distribution/Development signing identity found in keychain." >&2
+          security find-identity -v -p codesigning || true
+          exit 1
+        fi
+
+        echo "IOS_SIGNING_IDENTITY=$SIGNING_IDENTITY" >> "$GITHUB_ENV"
       
     - name: Restore dependencies
       run: dotnet restore 2048-Maui.slnx
@@ -84,6 +127,28 @@ jobs:
       run: dotnet build 2048-Maui.slnx --configuration Release --no-restore
       env:
         MAUI_TARGET_PLATFORM: ios
+
+    - name: Publish signed iOS IPA
+      if: github.event_name == 'workflow_dispatch' && github.ref == 'refs/heads/main'
+      shell: bash
+      run: |
+        set -euo pipefail
+        dotnet publish src/TwentyFortyEight.Maui/TwentyFortyEight.Maui.csproj \
+          -c Release \
+          -f net10.0-ios \
+          -p:RuntimeIdentifier=ios-arm64 \
+          -p:BuildIpa=true \
+          -p:CodesignKey="$IOS_SIGNING_IDENTITY" \
+          -p:CodesignProvision="$IOS_PROFILE_UUID"
+
+    - name: Upload iOS artifacts
+      if: github.event_name == 'workflow_dispatch' && github.ref == 'refs/heads/main'
+      uses: actions/upload-artifact@v4
+      with:
+        name: ios-ipa
+        path: |
+          src/TwentyFortyEight.Maui/bin/Release/**/publish/*.ipa
+          src/TwentyFortyEight.Maui/bin/Release/**/*.xcarchive
 
   build-windows:
     if: github.event_name == 'workflow_dispatch'
