--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -24,6 +24,11 @@
     <Copyright>Copyright © 2026</Copyright>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <!-- CSharpier: Always format, never fail build -->
+    <CSharpier_Check>false</CSharpier_Check>
+  </PropertyGroup>
+
   <ItemGroup>
     <!-- Code Formatting - runs on build -->
     <PackageReference Include="CSharpier.MsBuild" PrivateAssets="all" />
