--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -150,6 +150,15 @@ jobs:
           src/TwentyFortyEight.Maui/bin/Release/**/publish/*.ipa
           src/TwentyFortyEight.Maui/bin/Release/**/*.xcarchive
 
+    - name: Upload to App Store Connect
+      if: github.event_name == 'workflow_dispatch' && github.ref == 'refs/heads/main'
+      uses: apple-actions/upload-testflight-build@v1
+      with:
+        app-path: src/TwentyFortyEight.Maui/bin/Release/net10.0-ios/ios-arm64/publish/*.ipa
+        issuer-id: ${{ secrets.APPSTORE_ISSUER_ID }}
+        api-key-id: ${{ secrets.APPSTORE_API_KEY_ID }}
+        api-private-key: ${{ secrets.APPSTORE_API_PRIVATE_KEY }}
+
   build-windows:
     if: github.event_name == 'workflow_dispatch'
     runs-on: windows-latest
