--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -18,6 +18,7 @@
 
     <!-- Skia (cross-platform shader-capable rendering) -->
     <PackageVersion Include="SkiaSharp" Version="2.88.9" />
+    <PackageVersion Include="SkiaSharp.Skottie" Version="2.88.9" />
     <PackageVersion Include="SkiaSharp.Views.Maui.Controls" Version="2.88.9" />
     <!-- Testing Dependencies -->
     <PackageVersion Include="Moq" Version="4.18.4" />
